# docs/swagger.json
@@ -2,23 +2,29 @@
   "openapi": "3.1.0",
   "info": {
     "version": "1.0.0",
-    "title": "Contacts App",
+    "title": "My contacts",
     "license": {
       "name": "Apache 2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     },
-    "description": "This application manages contacts, providing functionalities for user registration, login, Google OAuth authentication, password reset, and operations on user-specific contacts stored in the database."
+    "description": "Add and save your contacts"
   },
   "servers": [
     {
-      "url": "https://hw2-mongodb-6ic0.onrender.com",
-      "description": "Production server"
+      "url": "http://localhost:3000"
+    },
+    {
+      "url": "https://nodejs-hw-mongodb-okzz.onrender.com"
     }
   ],
   "tags": [
     {
       "name": "Contacts",
-      "description": "Operations related to managing contacts."
+      "description": "Operations about contacts."
+    },
+    {
+      "name": "Auth",
+      "description": "Auth operations."
     }
   ],
   "paths": {
@@ -28,8 +34,8 @@
           "Contacts"
         ],
         "summary": "Get list of contacts",
-        "operationId": "getAllContacts",
-        "description": "Get list of contacts this user has",
+        "operationId": "getContacts",
+        "description": "Get list of contacts with this endpoint",
         "security": [
           {
             "bearerAuth": []
@@ -59,7 +65,7 @@
               "type": "string",
               "example": "name"
             },
-            "description": "All contacts's fields can be mentioned. Default value - name"
+            "description": "All contact's fields can be mentioned. Default value - _id"
           },
           {
             "in": "query",
@@ -75,47 +81,30 @@
           },
           {
             "in": "query",
-            "name": "name",
-            "schema": {
-              "type": "string",
-              "example": "Joe"
-            }
-          },
-          {
-            "in": "query",
-            "name": "phoneNumber",
-            "schema": {
-              "type": "string",
-              "example": "+380123456789"
-            }
-          },
-          {
-            "in": "query",
-            "name": "email",
-            "schema": {
-              "type": "string",
-              "example": "mymail@my.com"
-            }
-          },
-          {
-            "in": "query",
-            "name": "isFavorite",
-            "schema": {
-              "type": "string",
-              "example": true
-            }
-          },
-          {
-            "in": "query",
             "name": "contactType",
             "schema": {
               "type": "string",
               "enum": [
+                "personal",
                 "work",
-                "home",
-                "personal"
-              ],
-              "example": "work"
+                "home"
+              ]
+            }
+          },
+          {
+            "in": "query",
+            "name": "isFavourite",
+            "schema": {
+              "type": "boolean",
+              "example": false
+            }
+          },
+          {
+            "in": "query",
+            "name": "userId",
+            "schema": {
+              "type": "string",
+              "example": "65e4decdd286b30065d54af9"
             }
           }
         ],
@@ -191,15 +180,6 @@
           },
           "401": {
             "$ref": "#/components/responses/401"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "422": {
-            "$ref": "#/components/responses/422"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       },
@@ -226,39 +206,44 @@
                 ],
                 "properties": {
                   "name": {
-                    "description": "Contact name",
+                    "description": "Contact's name",
                     "type": "string",
                     "example": "John Doe"
                   },
                   "phoneNumber": {
-                    "description": "Contact phone number",
+                    "description": "Contact's number",
                     "type": "string",
-                    "example": "+380123456789"
+                    "example": 961111111
                   },
                   "email": {
-                    "description": "Contact email",
+                    "description": "Contact's email",
                     "type": "string",
-                    "example": "mymail@my.com"
+                    "example": "irina@mail.com"
                   },
-                  "contactType": {
-                    "description": "Contact type",
-                    "type": "string",
-                    "enum": [
-                      "work",
-                      "home",
-                      "personal"
-                    ],
-                    "example": "work"
-                  },
-                  "isFavorite": {
-                    "description": "Contact favorite",
+                  "isFavourite": {
+                    "description": "Is contact favorite",
                     "type": "boolean",
                     "example": true
                   },
-                  "photo": {
-                    "description": "Contact photo",
+                  "contactType": {
+                    "description": "Contact's type",
                     "type": "string",
-                    "format": "binary"
+                    "enum": [
+                      "personal",
+                      "work",
+                      "home"
+                    ]
+                  },
+                  "userId": {
+                    "description": "Contact's user id",
+                    "type": "string",
+                    "example": "65e4decdd286b30065d54af9"
+                  },
+                  "photo": {
+                    "description": "Link to contact's photo",
+                    "type": "string",
+                    "format": "binary",
+                    "example": "<https://res.cloudinary.com/uqwgdu/image/upload/image.png>"
                   }
                 }
               }
@@ -280,7 +265,7 @@
                   "properties": {
                     "status": {
                       "type": "integer",
-                      "example": 200
+                      "example": 201
                     },
                     "message": {
                       "type": "string",
@@ -295,17 +280,8 @@
               }
             }
           },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
           "401": {
             "$ref": "#/components/responses/401"
-          },
-          "422": {
-            "$ref": "#/components/responses/422"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       }
@@ -316,7 +292,7 @@
           "Contacts"
         ],
         "summary": "Get contact by id",
-        "operationId": "getContactById",
+        "operationId": "getContact",
         "description": "Get contact by id",
         "security": [
           {
@@ -364,14 +340,8 @@
               }
             }
           },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
           "404": {
             "$ref": "#/components/responses/404"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       },
@@ -379,9 +349,9 @@
         "tags": [
           "Contacts"
         ],
-        "summary": "Patch contact by id",
+        "summary": "Update contact by id",
         "operationId": "patchContact",
-        "description": "Patch contact by id",
+        "description": "Update contact by id",
         "security": [
           {
             "bearerAuth": []
@@ -398,56 +368,9 @@
             }
           }
         ],
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "required": [],
-                "properties": {
-                  "name": {
-                    "description": "Contact name",
-                    "type": "string",
-                    "example": "John Doe"
-                  },
-                  "phoneNumber": {
-                    "description": "Contact phone number",
-                    "type": "string",
-                    "example": "+380123456789"
-                  },
-                  "email": {
-                    "description": "Contact email",
-                    "type": "string",
-                    "example": "mymail@my.com"
-                  },
-                  "contactType": {
-                    "description": "Contact type",
-                    "type": "string",
-                    "enum": [
-                      "work",
-                      "home",
-                      "personal"
-                    ],
-                    "example": "work"
-                  },
-                  "isFavorite": {
-                    "description": "Contact favorite",
-                    "type": "boolean",
-                    "example": true
-                  },
-                  "photo": {
-                    "description": "Contact photo",
-                    "type": "string",
-                    "format": "binary"
-                  }
-                }
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Update contact by id",
             "content": {
               "application/json": {
                 "schema": {
@@ -464,7 +387,7 @@
                     },
                     "message": {
                       "type": "string",
-                      "example": "Successfully updated contact!"
+                      "example": "Successfully update contact with id 65ca67e7ae7f10c88b598384!"
                     },
                     "data": {
                       "type": "object",
@@ -475,20 +398,8 @@
               }
             }
           },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
           "404": {
             "$ref": "#/components/responses/404"
-          },
-          "422": {
-            "$ref": "#/components/responses/422"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       },
@@ -517,19 +428,10 @@
         ],
         "responses": {
           "204": {
-            "description": "No content"
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
+            "description": "The resource was deleted successfully."
           },
           "404": {
             "$ref": "#/components/responses/404"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
           }
         }
       }
@@ -539,8 +441,7 @@
     "securitySchemes": {
       "bearerAuth": {
         "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
+        "scheme": "bearer"
       }
     },
     "schemas": {
@@ -549,8 +450,7 @@
         "required": [
           "_id",
           "name",
-          "phoneNumber",
-          "userId"
+          "phoneNumber"
         ],
         "properties": {
           "_id": {
@@ -564,34 +464,33 @@
             "example": "John Doe"
           },
           "phoneNumber": {
-            "description": "Contact's phone number",
+            "description": "Contact's number",
             "type": "string",
-            "example": "+380123456789"
+            "example": 961111111
           },
-          "userId": {
-            "description": "Contact's user id",
+          "email": {
+            "description": "Contact's email",
             "type": "string",
-            "example": "65e4decdd286b30065d54af9"
+            "example": "irina@mail.com"
           },
-          "isFavorite": {
-            "description": "Whether is contact favorite",
+          "isFavourite": {
+            "description": "Is contact favorite",
             "type": "boolean",
-            "example": false
+            "example": true
           },
           "contactType": {
             "description": "Contact's type",
             "type": "string",
             "enum": [
+              "personal",
               "work",
-              "home",
-              "personal"
-            ],
-            "example": "personal"
+              "home"
+            ]
           },
-          "email": {
-            "description": "Contact's email",
+          "userId": {
+            "description": "Contact's user id",
             "type": "string",
-            "example": "test@gmail.com"
+            "example": "65e4decdd286b30065d54af9"
           },
           "photo": {
             "description": "Link to contact's photo",
@@ -602,43 +501,6 @@
       }
     },
     "responses": {
-      "400": {
-        "description": "Bad request error",
-        "content": {
-          "application/json": {
-            "schema": {
-              "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
-              "properties": {
-                "status": {
-                  "type": "integer",
-                  "example": 400
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Bad request"
-                },
-                "data": {
-                  "type": "object",
-                  "required": [
-                    "message"
-                  ],
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Bad request"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
       "401": {
         "description": "Unauthorized error",
         "content": {
@@ -677,7 +539,7 @@
         }
       },
       "404": {
-        "description": "Not found error",
+        "description": "Not found",
         "content": {
           "application/json": {
             "schema": {
@@ -704,81 +566,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Not found"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "422": {
-        "description": "Unprocessable Entity error",
-        "content": {
-          "application/json": {
-            "schema": {
-              "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
-              "properties": {
-                "status": {
-                  "type": "integer",
-                  "example": 422
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Unprocessable Entity"
-                },
-                "data": {
-                  "type": "object",
-                  "required": [
-                    "message"
-                  ],
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Validation failed"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "500": {
-        "description": "Internal server error",
-        "content": {
-          "application/json": {
-            "schema": {
-              "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
-              "properties": {
-                "status": {
-                  "type": "integer",
-                  "example": 500
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Internal server error"
-                },
-                "data": {
-                  "type": "object",
-                  "required": [
-                    "message"
-                  ],
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Internal server error"
+                      "example": "Contact with id 65ca67e7ae7f10c88b598384 not found"
                     }
                   }
                 }
