# src/controllers/contacts.js
@@ -1,64 +1,60 @@
-import createHttpError from 'http-errors';
-
-import { env } from '../utils/env.js';
-import { parsePaginationParams } from '../utils/parsePaginationParams.js';
-import { parseSortParams } from '../utils/parseSortParams.js';
-import { parseFilterParams } from '../utils/parseFilterParams.js';
-import { saveFileToUploadDir } from '../utils/saveFileToUploadDir.js';
-import { saveFileToCloudinary } from '../utils/saveFileToCloudinary.js';
-
 import {
   createContact,
   deleteContact,
   getAllContacts,
   getContactById,
-  patchContact,
+  updateContact,
 } from '../services/contacts.js';
+import createHttpError from 'http-errors';
+import { parsePaginationParams } from '../utils/parsePaginationParams.js';
+import { parseSortParams } from '../utils/parseSortParams.js';
+import { parseFilterParams } from '../utils/parseFilterParams.js';
+import { saveFileToCloudinary } from '../utils/saveFileToCloudinary.js';
+import { env } from '../env.js';
+import { saveFileToUploadDir } from '../utils/saveFileToUploadDir.js';
 
 export const getContactsController = async (req, res) => {
   const { page, perPage } = parsePaginationParams(req.query);
-  const { sortBy, sortOrder } = parseSortParams(req.query);
-  const filter = parseFilterParams(req.query);
+  const { sortOrder, sortBy } = parseSortParams(req.query);
   const userId = req.user._id;
+  const filter = { ...parseFilterParams(req.query), userId };
 
   const contacts = await getAllContacts({
+    userId,
     page,
     perPage,
-    sortBy,
     sortOrder,
+    sortBy,
     filter,
-    userId,
   });
-
-  if (contacts.data.length === 0) {
-    throw createHttpError(404, 'Contacts not found');
-  }
-
-  res.json({
-    status: 200,
+  res.status(200).json({
+    status: res.statusCode,
     message: 'Successfully found contacts!',
     data: contacts,
   });
 };
 
-export const getContactByIdController = async (req, res) => {
+export const getContactByIdController = async (req, res, next) => {
   const { contactId } = req.params;
   const userId = req.user._id;
   const contact = await getContactById(contactId, userId);
 
   if (!contact) {
-    throw createHttpError(404, 'Contact not found');
+    next(createHttpError(404, `Contact with id '${contactId}' not found`));
+    return;
   }
 
-  res.json({
-    status: 200,
-    message: `Successfully found contact with id ${contactId}!`,
+  res.status(200).json({
+    status: res.statusCode,
+    message: `Successfully found contact with id '${contactId}'!`,
     data: contact,
   });
 };
 
-export const createContactController = async (req, res) => {
+export const createContactsController = async (req, res) => {
+  const userId = req.user._id;
   const photo = req.file;
+
   let photoUrl;
 
   if (photo) {
@@ -69,22 +65,16 @@ export const createContactController = async (req, res) => {
     }
   }
 
-  const contactData = {
-    ...req.body,
-    userId: req.user._id,
-    photo: photoUrl,
-  };
-
-  const contact = await createContact(contactData, req);
+  const contact = await createContact({ ...req.body, photo: photoUrl, userId });
 
   res.status(201).json({
     status: 201,
-    message: `Successfully created a contact!`,
+    message: 'Successfully created a contact!',
     data: contact,
   });
 };
 
-export const patchContactController = async (req, res) => {
+export const updateContactController = async (req, res, next) => {
   const { contactId } = req.params;
   const userId = req.user._id;
   const photo = req.file;
@@ -99,38 +89,32 @@ export const patchContactController = async (req, res) => {
     }
   }
 
-  const patchedContact = await patchContact(
-    contactId,
-    {
-      ...req.body,
-      photo: photoUrl,
-    },
-    userId,
-  );
+  const result = await updateContact(contactId, userId, {
+    ...req.body,
+    photo: photoUrl,
+  });
 
-  if (!patchedContact) {
-    throw createHttpError(404, 'Contact not found');
+  if (!result) {
+    next(createHttpError(404, `Contact with id ${contactId} not found`));
+    return;
   }
 
   res.status(200).json({
     status: 200,
-    message: 'Successfully patched a contact!',
-    data: patchedContact.contact,
+    message: `Successfully patched a contact with id '${contactId}'!`,
+    data: result.data,
   });
 };
 
-export const deleteContactController = async (req, res) => {
+export const deleteContactController = async (req, res, next) => {
   const { contactId } = req.params;
   const userId = req.user._id;
 
-  const deletedContact = await deleteContact(contactId, userId);
+  const result = await deleteContact(contactId, userId);
 
-  if (!deletedContact) {
-    throw createHttpError(404, 'Contact not found', {
-      data: {
-        message: 'Contact not found',
-      },
-    });
+  if (!result) {
+    next(createHttpError(404, `Contact with id ${contactId} not found`));
+    return;
   }
 
   res.status(204).send();
